testdata/errors/unexported_type.go
package errors

type unexported struct {
	unexported bool
}
